Breakout URL paths

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,14 @@
 command = "npm start"
 
 [[redirects]]
-from = "/stats/:user/:year?/"
+from = "/stats/:user/:year/"
+to = "/.netlify/functions/stats"
+status = 200
+force = true
+_generated_by_eleventy_serverless = "stats"
+
+[[redirects]]
+from = "/stats/:user/"
 to = "/.netlify/functions/stats"
 status = 200
 force = true
