--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/5t3ph/repos-wrapped#readme",
   "dependencies": {
     "@11ty/eleventy": "^1.0.0-beta.9",
+    "@netlify/functions": "^0.10.0",
     "autoprefixer": "^10.4.0",
     "cssnano": "^5.0.14",
     "node-fetch": "^2.6.6",
