--- a/package.json
+++ b/package.json
@@ -27,11 +27,17 @@
     "@11ty/eleventy": "^1.0.0-beta.9",
     "@netlify/functions": "^0.10.0",
     "autoprefixer": "^10.4.0",
+    "chrome-aws-lambda": "^10.1.0",
     "cssnano": "^5.0.14",
+    "dotenv": "^10.0.0",
     "node-fetch": "^2.6.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
+    "puppeteer-core": "^10.1.0",
     "sass": "^1.45.1"
+  },
+  "devDependencies": {
+    "puppeteer": "^10.1.0"
   }
 }
