--- a/netlify.toml
+++ b/netlify.toml
@@ -16,7 +16,7 @@ force = true
 _generated_by_eleventy_serverless = "stats"
 
 [[redirects]]
-from = "/social-img/:user/:year/:total/:stars"
+from = "/social-img/:user/:year/:total/:stars/:starsrepo"
 to = "/.netlify/functions/screenshot"
 status = 200
 force = true
