--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/5t3ph/repos-wrapped#readme",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.0-beta.9",
+    "@11ty/eleventy": "^1.0.2",
     "@netlify/functions": "^0.10.0",
     "autoprefixer": "^10.4.0",
     "chrome-aws-lambda": "^10.1.0",
